# neural_data_decoding

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  HANDOFF.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml
0.1/: 404.html  index.html  objects.inv  sitemap.xml
0.1/adrs/: index.html
0.1/contributing/: index.html
0.1/glossary/: index.html
0.1/quickstart/: index.html
0.1/search/: search_index.json
0.1/troubleshooting/: index.html
configs/: base.yaml  optimal.yaml
configs/schedule/: kl_annealing.yaml  no_dynamic_parameters.yaml  none.yaml  soft_three_stage_curriculum_shortened.yaml
configs/target_milestone/: A_logistic_synthetic.yaml  B_gru_classifier_synthetic.yaml  C_optimal_synthetic.yaml  C_two_stage_synthetic.yaml  real_data_base.yaml
docs/: MILESTONE_D_PLAN.md  PLAN.md  mkdocs.yml
docs/api/: conf.py  data.rst  index.rst  interop.rst  models.rst  sweeps.rst  training.rst
docs/narrative/: contributing.md  glossary.md  index.md  quickstart.md  troubleshooting.md
notebooks/: README.md  _build_notebook.py
notebooks/00_orientation/: 00.1_welcome.ipynb  00.2_set_up_your_environment.ipynb  00.3_the_matlab_to_python_mental_model.ipynb  00.4_ide_deep_dive.ipynb  00.5_the_command_line_for_matlab_users.ipynb  00.6_git_and_github_for_matlab_users.ipynb  00.7_pip_packaging_and_project_anatomy.ipynb  00.8_build_a_dl_project_from_scratch.ipynb
notebooks/01_python_for_matlab_users/: 01.1_syntax_basics.ipynb  01.2_control_flow.ipynb  01.3_functions_and_lambdas.ipynb  01.4_classes_and_oop.ipynb  01.5_modules_and_imports.ipynb  01.6_error_handling.ipynb  01.7_dataclasses_and_typed_configs.ipynb  01.8_the_python_standard_library_for_matlab_users.ipynb
notebooks/02_numpy_and_pytorch_basics/: 02.1_numpy_vs_matlab_arrays.ipynb  02.2_array_axis_conventions.ipynb  02.3_loading_mat_files.ipynb  02.4_pytorch_tensors_intro.ipynb  02.5_autograd_basics.ipynb  02.6_nn_module_vs_layergraph.ipynb  02.7_optimizers_and_learning_rates.ipynb  02.8_nan_handling.ipynb
notebooks/03_data_pipeline/: 03.1_dataset_vs_filedatastore.ipynb  03.2_dataloader_and_collation.ipynb  03.3_the_session_balanced_sampler.ipynb  03.4_kfold_stratification_deep_dive.ipynb  03.5_normalization_recipes.ipynb  03.6_augmentation_per_call_contract.ipynb
notebooks/04_architecture/: 04.1_architecture_string_dispatcher.ipynb  04.2_building_a_simple_encoder.ipynb  04.3_rnn_building_blocks.ipynb  04.4_convolutional_backbones.ipynb  04.5_the_bottleneck.ipynb  04.6_multi_head_classifier.ipynb  04.7_weighted_classification_loss.ipynb  04.8_weight_initialization_he_vs_pytorch_defaults.ipynb
notebooks/05_training_loop/: 05.1_the_custom_training_loop.ipynb  05.2_gradient_accumulation.ipynb  05.3_gradient_clipping.ipynb  05.4_learning_rate_scheduling.ipynb  05.5_checkpoint_resume_state_machine.ipynb  05.6_the_two_stage_lifecycle.ipynb  05.7_batch_norm_state_synchronization.ipynb
notebooks/06_loss_orchestration/: 06.10_nan_masked_reconstruction.ipynb  06.11_single_total_loss_three_subnetworks.ipynb  06.12_ema_prior_normalization_deep_dive.ipynb  06.13_sampling_layer_deterministic_at_inference.ipynb  06.1_multi_task_losses_overview.ipynb  06.2_vae_and_the_elbo.ipynb  06.3_stochastic_vs_deterministic_placement.ipynb  06.4_the_ema_prior_normalization_deep_dive.ipynb  06.5_mil_softmax_pooling.ipynb  06.6_confidence_routing.ipynb  06.7_the_confidence_pd_controller.ipynb  06.8_l2_inside_the_loss_kernel.ipynb  06.9_per_batch_prior_correction.ipynb
notebooks/07_dynamic_curriculum/: 07.1_curriculum_learning_intuition.ipynb  07.2_piecewise_linear_schedules.ipynb  07.3_load_parameters.ipynb  07.4_loss_weights_curriculum.ipynb  07.5_freeze_unfreeze_curriculum.ipynb  07.6_walkthrough_soft_three_stage_curriculum_shortened.ipynb
notebooks/08_output_and_analysis/: 08.1_folder_hierarchy_generation.ipynb  08.2_writing_mat_files_for_matlab.ipynb  08.3_monitor_table_compatibility.ipynb  08.4_the_mat_round_trip_test.ipynb  08.5_weights_and_biases_integration.ipynb  08.6_running_matlab_analysis_on_python_output.ipynb
notebooks/09_production_deployment/: 09.1_environment_detection.ipynb  09.2_slurm_dispatch.ipynb  09.3_hydra_config_composition.ipynb  09.4_parameter_sweeps.ipynb  09.5_debugging_a_failing_run.ipynb  09.6_extending_the_pipeline.ipynb
scripts/: build_docs.sh  convert_reference_cm_tables.m  generate_stratification_fixture.m  generate_t2_composite_fixture.m  generate_t2_confidence_beta_fixture.m  generate_t2_confidence_fixture.m  generate_t2_dynamic_schedule_interpolator_fixture.m  generate_t2_elbo_fixture.m  generate_t2_encoder_fixture.m  generate_t2_encoder_fixture_lstm.m  generate_t2_mil_softmax_fixture.m  ndd_add_matlab_paths.m  prepare_golden_fixtures.py  verify_mat_roundtrip.py
src/neural_data_decoding/: __init__.py  __main__.py  cli.py
tests/: conftest.py
tests/integration/: test_cm_table_windows.py  test_real_data_smoke.py  test_slurm_sweep_coverage.py
tests/parity/: __init__.py  test_cm_table_parity.py  test_end_to_end_convergence.py  test_matlab_table_writer.py  test_stratification_parity.py  test_t2_composite_forward_parity.py  test_t2_confidence_beta_parity.py  test_t2_confidence_parity.py  test_t2_dynamic_schedule_interpolator_parity.py  test_t2_dynamic_schedule_library_parity.py  test_t2_elbo_parity.py  test_t2_encoder_forward_parity.py  test_t2_mil_softmax_parity.py
tests/unit/: test_accumulation.py  test_architecture_registry.py  test_augmentation.py  test_classifier.py  test_cli.py  test_confidence.py  test_confidence_heads.py  test_conv_encoder.py  (+38 more)
(+171 files in other folders)
