[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "neural_data_decoding"
version = "0.0.1"
description = "Python port of the MATLAB neural decoding pipeline (Processing_Functions_cgg)."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Charles Gerrity" },
]
classifiers = [
    "License :: Other/Proprietary License",
    # `Private :: Do Not Upload` is not a valid PyPI trove classifier, so
    # `twine`/PyPI reject any attempt to upload this proprietary package.
    "Private :: Do Not Upload",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    # Core deep learning.
    # NOTE: PyTorch dropped Intel-macOS wheels after 2.2.2, and NumPy 2.x
    # requires a torch wheel built against the new ABI. On Apple Silicon
    # with a native arm64 Python you can bump both. On Intel macOS (or a
    # Rosetta-translated Python) the only compatible combination is the
    # 2.2.x torch line with NumPy <2.
    "torch>=2.1,<2.3",
    "numpy>=1.24,<2",
    "scipy>=1.11",
    # .mat file IO — scipy handles <v7.3, mat73 handles v7.3 (HDF5)
    "h5py>=3.10",
    "mat73>=0.65",
    # Tabular + scientific
    "pandas>=2.1",
    "scikit-learn>=1.3",
    # Config composition + serialization
    "pyyaml>=6.0",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    # Telemetry
    "wandb>=0.16",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "black>=24",
    "pre-commit>=3.5",
    "nbstripout>=0.6",
    "jupyter>=1.0",
    "ipykernel>=6.27",
    "interrogate>=1.5",
    "matplotlib>=3.7",  # curriculum notebooks render figures inline
]
docs = [
    # MkDocs narrative track
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
    "mike>=2.0",
    # Sphinx API track
    "sphinx>=7.2",
    "sphinx-autodoc-typehints>=1.25",
    "sphinx-autobuild>=2024.2",
    "myst-parser>=2.0",
    "furo>=2024.1",
]
cluster = [
    "submitit>=1.5",
    "ray[tune]>=2.9",
]

[project.scripts]
neural_data_decoding = "neural_data_decoding.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/neural_data_decoding"]

# ───────────────────────── Lint / format ─────────────────────────
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# E,W = pycodestyle, F = pyflakes, I = isort, B = bugbear,
# UP = pyupgrade, NPY = numpy-specific, PT = pytest-style
select = ["E", "W", "F", "I", "B", "UP", "NPY", "PT"]
ignore = [
    "E501",  # line length handled by black
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]  # allow assert False in tests

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

# ───────────────────────── Pyright / Pylance ─────────────────────────
[tool.pyright]
include = ["src", "tests", "scripts"]
exclude = ["**/__pycache__", "**/build", ".venv", "docs/build"]
# torch lazy-loads many top-level attributes (torch.zeros, torch.isnan, torch.where,
# torch.exp, torch.dtype, torch.device, …) that pyright doesn't see as exported.
# Pylance / pyright then flags every use as reportPrivateImportUsage. These are
# false positives — the attributes are part of torch's documented public API, just
# not statically discoverable. Silence the rule rather than litter the codebase
# with per-line ignores.
reportPrivateImportUsage = "none"
pythonVersion = "3.11"

# ───────────────────────── Docstring coverage ─────────────────────────
[tool.interrogate]
# Constructor parameters are documented in the *class* docstring's
# Parameters section (the NumPy docstring convention), not in a separate
# __init__ docstring — so __init__ is exempt. The class itself still
# requires a docstring (ignore-module / class checks remain on).
ignore-init-method = true
ignore-init-module = true
ignore-magic = false
ignore-semiprivate = false
ignore-private = true            # leading-underscore helpers only need one-line summary (enforced manually)
ignore-property-decorators = false
ignore-module = false
ignore-nested-functions = true
ignore-setters = false
# @overload typing stubs carry `...` bodies; the concrete implementation
# they precede holds the real docstring, so the stubs are exempt.
ignore-overloaded-functions = true
fail-under = 100
exclude = ["tests", "scripts", "docs", "notebooks"]
ignore-regex = ["^get$", "^mock_.*", ".*BaseClass.*"]
verbose = 2
quiet = false
color = true
omit-covered-files = false

# ───────────────────────── Pytest ─────────────────────────
[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    # MATLAB-driven round-trip tests (G7) are manual milestone-boundary
    # gates per the migration plan, not every-run checks: each spawns a
    # MATLAB process (~15-20s cold start). Deselect by default; run them
    # explicitly with `pytest -m needs_matlab`.
    "-m",
    "not needs_matlab",
]
testpaths = ["tests"]
markers = [
    "parity: tests that compare Python output against MATLAB reference fixtures",
    "slow: tests that take longer than ~5s",
    "needs_matlab: tests that require MATLAB to be installed",
    "needs_gpu: tests that require CUDA",
]

[tool.coverage.run]
branch = true
source = ["src/neural_data_decoding"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
